# flatland-torchrl

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  flatland_ppo_training_torchrl.py  puffer-mappo.md  pyproject.toml  torchrl_rollout_demo.py
.github/workflows/: carbs-sweep.yml  sweep.yml  train-and-demo.yml
curriculums/: 1_4_50_agents.json  jiang_phase_III_100.json  jiang_phase_III_200.json  jiang_phase_III_80.json  jiang_phase_II_50.json  jiang_phase_I_50.json  jiang_phases_1_3_7_to_10_agents_30x30.json  jiang_phases_1_3_ci_2_to_5_agents_30x30.json  jiang_sweep_2_agents_30x30.json
flatland_torchrl/: torchrl_rail_env.py
run_commands/: benchmarl_ippo_flatland.sh  benchmarl_mappo_flatland.sh  carbs_sweep_flatland.sh  jiang_multi_phase_runs.sh  jiang_phase_1_3.sh  jiang_phase_1_3_ci.sh
runs/flatland-rl__50_agents_lstm_l2_paper_reward__2__1769693734/: events.out.tfevents.1769693734.Louies-MacBook-Pro.local.98675.0
runs/flatland-rl__50_agents_lstm_l2_paper_reward__2__1769693922/: events.out.tfevents.1769693922.Louies-MacBook-Pro.local.861.0
runs/flatland-rl__example_agents_lstm_l2_paper_reward__2__1769783555/: events.out.tfevents.1769783555.Louies-MacBook-Pro.local.50390.0
runs/flatland-rl__jiang_phase_1_3_7_to_10_agents__1__1769798065/: events.out.tfevents.1769798065.Louies-MacBook-Pro.local.85110.0
scripts/: bootstrap.sh  carbs_sweep.py  check_carbs_availability.py  demo_benchmarl_flatland.py  puffer_sweep.py  train_benchmarl_flatland.py
solution/nn/: net_tree.py  net_tree_torchrl.py  net_tree_transformer.py
tools/: requirements.txt
(+19 files in other folders)
