[project]
name = "flatland-marl--ppo"
version = "0.1.0"
description = "An implementation of PPO to train a TreeLSTM network for flatland"
readme = "README.md"
requires-python = ">=3.10,< 3.12"
authors = [{ name = "Emanuel Zwyssig" }]

dependencies = [
  "pybind11==2.11.1",
  "torch==2.10.0",
  "tqdm>=4.66.1,<5",
  "PyYAML>=6.0.1,<7",
  "ffmpeg-python>=0.2.0,<0.3",
  "tensordict==0.11.0",
  "wheel>=0.41.3,<1",
  "fasttext-wheel>=0.9.2,<1",
  "tensorboard>=2.15.0,<3",
  "ipykernel>=6.26.0,<7",
  "pylint>=3.0.2,<4",
  "black>=23.11.0,<24",
  "pre-commit>=3.5.0,<4",
  "pre-commit-hooks>=4.5.0,<5",
  "mypy>=1.6.1,<2",
  "gymnasium==0.29.1",
  "openpyxl>=3.1.2,<4",
  "rich>=13.7.0,<14",
  "optuna>=3.4.0,<4",
  "docopt>=0.6.2,<1",
  "pytest>=7.4.4,<8",
  "torchsummary>=1.5.1,<2",
  "flatland-rl==4.0.1",
  "torchrl==0.11.0",
  "numpy<2",
  "setuptools>=69.0.0,<70",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.uv.extra-build-dependencies]
flatland_cutils = ["setuptools", "wheel", "pybind11"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
